# claude-config

skills/scripts/: CLAUDE.md  pyproject.toml  validate_conventions.py
skills/scripts/skills/arxiv_to_md/: CLAUDE.md  README.md  main.py  sub_agent.py  tex_utils.py
skills/scripts/skills/codebase_analysis/: analyze.py  subagent.py
skills/scripts/skills/decision_critic/: decision_critic.py
skills/scripts/skills/deepthink/: subagent.py  think.py
skills/scripts/skills/incoherence/: CLAUDE.md  incoherence.py
skills/scripts/skills/leon_writing_style/: writing_style.py
skills/scripts/skills/lib/: conventions.py  io.py
skills/scripts/skills/lib/workflow/: CLAUDE.md  README.md  __init__.py  cli.py  core.py  discovery.py  quality_docs.py  types.py
skills/scripts/skills/planner/: CLAUDE.md  README.md
skills/scripts/skills/planner/architect/: CLAUDE.md  __init__.py  plan_design.py  plan_design_execute.py  plan_design_qr_fix.py
skills/scripts/skills/planner/cli/: CLAUDE.md  FOLLOWUPS.md  __init__.py  dispatch.py  output.py  plan.py  plan_commands.py  plan_common.py  qr.py  qr_commands.py  qr_common.py  verify.py
skills/scripts/skills/problem_analysis/: analyze.py
skills/scripts/skills/prompt_engineer/: optimize.py
skills/scripts/skills/refactor/: explore.py  refactor.py
skills/scripts/skills/retrospective/: proposals.py  retrospect.py  subagent.py  transcript.py
skills/scripts/tests/: CLAUDE.md  conftest.py  test_ast.py  test_audit_fixes.py  test_audit_s4_cleanup.py  test_batch_roundtrip_fixes.py  test_codereview_followups.py  test_diff_batch_inline_free.py  test_doc_consistency.py  test_domain_types.py  test_executor_iteration.py  test_generation.py  test_maxreview_fixes.py  test_newa_cwd_pinning.py  test_planner_redesign.py  test_qr_verify_routing.py  test_renderer_escaping.py  test_retrospective.py  test_slugify.py  test_solatis_regression.py  test_uv_run_invariant.py  test_validate_conventions.py  test_verify_gate.py  test_workflow_import.py  test_workflow_steps.py  test_workflow_structure.py
(+97 files in other folders)
